# rm_engineer

./: .gitignore  compile_commands.json  param_set.sh  rerun.sh  source.sh
src/auto/auto_node/: CMakeLists.txt  package.xml
src/auto/auto_node/config/: auto_node.yaml
src/auto/auto_node/include/auto_node/: auto_node.hpp
src/auto/auto_node/launch/: start_auto_node.launch.py
src/auto/auto_node/src/: auto_node.cpp
src/auto/task_step_library/: CMakeLists.txt  package.xml
src/auto/task_step_library/include/task_step_library/: context.hpp  step.hpp  task.hpp  types.hpp
src/auto/top_hfsm_node_v2/: CMakeLists.txt  package.xml
src/auto/top_hfsm_node_v2/config/: top_hfsm_node.yaml
src/auto/top_hfsm_node_v2/src/node/: top_hfsm_node.cpp
src/drivers/fake_system_node/: CMakeLists.txt  README.md  package.xml
src/drivers/fake_system_node/config/: fake_system_node.yaml
src/drivers/fake_system_node/include/fake_system/: config.hpp  error_code.hpp  fake_system_node.hpp
src/drivers/fake_system_node/launch/: fake_system_node.launch.py
src/drivers/fake_system_node/src/: fake_system_node.cpp
src/drivers/usb_cdc_node/: CMakeLists.txt  README.md  package.xml
src/drivers/usb_cdc_node/config/: usb_cdc_node.yaml
src/drivers/usb_cdc_node/include/usb_cdc/: config.hpp  error_code.hpp  packet.hpp  usb_cdc_driver.hpp  usb_cdc_node.hpp
src/drivers/usb_cdc_node/launch/: usb_cdc_node.launch.py
src/drivers/usb_cdc_node/src/: usb_cdc_driver.cpp  usb_cdc_node.cpp
src/motion/arm_servo_node/: CMakeLists.txt  package.xml
src/motion/arm_servo_node/config/: arm_servo_node.yaml  servo_config.yaml
src/motion/arm_servo_node/include/arm_servo/: arm_servo_node.hpp  config.hpp  error_code.hpp
src/motion/arm_servo_node/launch/: servo_container.launch.py
src/motion/arm_servo_node/src/: arm_servo_node.cpp  servo_keyboard_input.cpp
src/motion/arm_solve_node/: CMakeLists.txt  README.md  package.xml
src/motion/arm_solve_node/config/: arm_solve_server.yaml
src/motion/arm_solve_node/include/arm_solve/: arm_solve_server.hpp  config.hpp  error_code.hpp
src/motion/arm_solve_node/src/: arm_solve_server.cpp
src/motion/solve_core/: CMakeLists.txt  package.xml
src/motion/solve_core/include/solve_core/: config.hpp  error_code.hpp  solve_core.hpp
src/motion/solve_core/src/: solve_core.cpp
src/motion/solve_core/src/calculate_tools/: cost_func.cpp  hybrid_ik.cpp  sample.cpp
src/motion/solve_core/src/planner/: limit_planner.cpp  straight_planner.cpp
src/robots/engineer_bringup/: CMakeLists.txt  package.xml
src/robots/engineer_bringup/config/: bringup.yaml  ompl_planning.yaml
src/robots/engineer_bringup/include/engineer_bringup/: base_config.hpp
src/robots/engineer_bringup/launch/: base_bringup.launch.py  robot_bringup.launch.py  test.launch.py
src/robots/engineer_description/: CMakeLists.txt  package.xml
src/robots/engineer_description/collision_dae/: base_link.dae  first_slot_link.dae  left_finger_link.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  right_finger_link.dae  second_slot_link.dae
src/robots/engineer_description/collision_meshes/: base_link.stl  first_slot_link.stl  left_finger_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  right_finger_link.stl  second_slot_link.stl
src/robots/engineer_description/dae/: first_slot_link.dae  left_finger_link.dae  link1.dae  link2.dae  link3.dae  link5.dae  right_finger_link.dae  second_slot_link.dae
src/robots/engineer_description/meshes/: first_slot_link.STL  left_finger_link.STL  link1.STL  link2.STL  link3.STL  link5.STL  right_finger_link.STL  second_slot_link.STL
src/robots/engineer_description/urdf/: engineer_ikfast  engineer_ikfast.cpp  engineer_v3.urdf  engineer_v4.urdf
src/robots/engineer_interfaces/: CMakeLists.txt  engineer消息汇总.md  package.xml
src/robots/engineer_interfaces/action/: Move.action
src/robots/engineer_interfaces/msg/: Gripper.msg  GripperCommand.msg  HFSMIntent.msg  Intent.msg  Joint.msg  JointCommand.msg  Joints.msg  ModeCommand.msg  Pose.msg  Slot.msg  Slots.msg  Target.msg
src/robots/engineer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robots/engineer_moveit_config/config/: engineer_v3.ros2_control.xacro  engineer_v3.srdf  engineer_v3.urdf.xacro  engineer_v4.ros2_control.xacro  engineer_v4.srdf  engineer_v4.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  no_octomap.yaml  ros2_controllers.yaml
src/robots/engineer_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/system/service_hub/: CMakeLists.txt  package.xml
src/system/teleop_input_adapter/: CMakeLists.txt  package.xml
src/system/teleop_input_adapter/src/: teleop_input_adapter.cpp
src/system/top_hfsm_core_v2/: CMakeLists.txt  package.xml
src/system/top_hfsm_executors_v2/: CMakeLists.txt  package.xml
src/system/top_hfsm_node/: CMakeLists.txt  README.md  package.xml
src/system/top_hfsm_node/config/: top_hfsm_node.yaml
src/system/top_hfsm_node/launch/: top_hfsm_node.launch.py
src/system/top_hfsm_node/src/: top_hfsm_node.cpp
src/system/topic_hub/: CMakeLists.txt  package.xml
src/teleop/teleop_node/: CMakeLists.txt  package.xml
src/teleop/teleop_node/config/: teleop_node.yaml
src/teleop/teleop_node/launch/: start_teleop_node.launch.py
src/teleop/teleop_node/src/: collision_checker.cpp  teleop_node.cpp
src/tools/ee_path_node/: CMakeLists.txt  package.xml
src/tools/ee_path_node/src/: ee_path_node.cpp
src/tools/object_load/: CMakeLists.txt  package.xml
src/tools/object_load/src/: object_load_node.cpp
src/utils/error_code_utils/: CMakeLists.txt  README.md  package.xml
src/utils/error_code_utils/tests/: test_counter.cpp  test_latch_ack.cpp
src/utils/hfsm_tools/: CMakeLists.txt  package.xml
src/utils/hfsm_tools/hfsm_tools/: hfsm_intent_runner.py
src/utils/hfsm_tools/src/: hfsm_intent_runner.cpp
(+225 files in other folders)
