<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_node</name>
  <version>0.0.0</version>
  <description>ROS2 entry node for auto execution.</description>
  <maintainer email="2281904682@qq.com">wrj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>engineer_interfaces</depend>
  <depend>task_step_library</depend>
  <depend>task_orchestrator</depend>
  <depend>step_executor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
