<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2281904682@qq.com">wrj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>trajectory_msgs</depend>
  <depend>engineer_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>control_msgs</depend>
  <depend>param_utils</depend>
  <depend>error_code_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
