<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solve_core</name>
  <version>0.0.0</version>
  <description>Pure MoveIt planning core (ROS-agnostic interface).</description>
  <maintainer email="2281904682@qq.com">wrj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>error_code_utils</depend>
  <depend>log_utils</depend>
  <depend>moveit_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
