<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>error_code_utils</name>
  <version>0.0.0</version>
  <description>Lightweight, ROS-agnostic error primitives and event bus.</description>
  <maintainer email="2281904682@qq.com">wrj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
